--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -1,9 +1,13 @@
 server {
  listen 80;
+ server_tokens off;
+ gzip on;
  location / {
    root /usr/share/nginx/html;
    index docs/next/overview.html docs/next/overview.html;
    try_files $uri $uri/ /docs/next/$request_uri =404;
    error_page 403 404 /docs/next/overview.html;
+   add_header 'Cache-Control' 'no-cache, must-revalidate, max-age=600';
+   add_header 'Vary' 'Accept-Encoding';
  }
 }
