--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -5,12 +5,8 @@ server {
  location / {
    root /usr/share/nginx/html;
    index docs/next/getstarted.html docs/next/getstarted.html;
-   try_files $uri $uri/ /docs/next/$request_uri =404;
-<<<<<<< HEAD
-   error_page 403 404 /docs/next/getstarted.html;
-=======
+   try_files $suri $uri/ /docs/next/$request_uri =404;
    error_page 403 404 /docs/next/overview.html;
->>>>>>> Add headers to support caching & gzip-ing resources (#29)
    add_header 'Cache-Control' 'no-cache, must-revalidate, max-age=600';
    add_header 'Vary' 'Accept-Encoding';
  }
