--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -4,9 +4,9 @@ server {
  gzip on;
  location / {
    root /usr/share/nginx/html;
-   index docs/next/overview.html docs/next/overview.html;
+   index docs/next/getstarted.html docs/next/getstarted.html;
    try_files $uri $uri/ /docs/next/$request_uri =404;
-   error_page 403 404 /docs/next/overview.html;
+   error_page 403 404 /docs/next/getstarted.html;
    add_header 'Cache-Control' 'no-cache, must-revalidate, max-age=600';
    add_header 'Vary' 'Accept-Encoding';
  }
