Make Travis config to make it compatible with new changes
Added yarn install command for installing docusaurus-build

Signed-off-by: Aswath K <aswath.sana@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ services:
 script:
   - python tag.py
   - cd website
-  - npm run build
+  - yarn install
+  - yarn build
   - cd ..
   - 
 after_success:
