--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ package-lock.json
 lib/core/metadata.js
 lib/core/MetadataBlog.js
 
+docs/embedmd-command.sh
+
 website/translated_docs
 website/build/
 website/yarn.lock
