Adding the link check tool to travis
Going ahead with https://github.com/bmuschko/link-verifier as the choice
of link checking tool. It is written in Go, is quite fast and accurate.

Currently keeping the tool check not to cause the build failure upon
finding broken links. Build failure will be kept in enforcing mode once
the sanity of document links is in good health.

Signed-off-by: Jayesh Kumar <k8s.cncf@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ env:
 
 services:
 - docker
+install:
+  - go get -u -v github.com/bmuschko/link-verifier
+before_script:
+  - link-verifier --dirs docs,website,README.md --fail=false
 script:
   - python tag.py
   - cd website
