Removing script for formatting
Signed-off-by: Udit Gaurav <udit.gaurav@mayadata.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Commit files
         run: |
-          git config --local user.email "litmuschaosbot@github.com"
+          git config --local user.email "litmuschaos@gmail.com"
           git config --local user.name "LitmusChaos"
           git commit -s -m "Add embedmd changes" -a
         continue-on-error: true
