--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,12 @@ jobs:
           if [ "$count" -ne "0" ]
           then
             tput setaf 1; echo "Error: embedmd check failed"
-            tput setaf 4; echo "Please check these files need a embedmd run:"
+            tput setaf 4; echo "Please check these files need an embedmd run:"
             output=$(git status -s)
             echo "$output" | boxes -d stone -p a2v1
             tput setaf 3; echo "Please follow the instructions to run embedmd:"
             tput setaf 3; echo "cd docs"
-            tput setaf 3; echo "embedmd -w $(find *.md)"
+            tput setaf 3; echo "embedmd -w \$(find *.md)"
             tput setaf 6; echo "For more info visit https://github.com/litmuschaos/litmus-docs/blob/master/CONTRIBUTING.md"
             exit 1
           else
