--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ env:
 services:
 - docker
 install:
-  - go get -u -v github.com/bmuschko/link-verifier
+  #- go get -u -v github.com/bmuschko/link-verifier
 before_script:
-  - link-verifier --dirs docs,website,README.md --fail=false
+  #- link-verifier --dirs docs,website,README.md --fail=false
 script:
   - python tag.py
   - cd website
