Added Spell-Check Action.
Signed-off-by: Jonsy13 <vedant.shrotria@chaosnative.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,14 @@ jobs:
             tput setaf 2; echo "Nothing to embed"
           fi
         shell: sh
+  
+  Spellcheck:
+    runs-on: ubuntu-latest
+    steps:
+    # The checkout step
+    - uses: actions/checkout@master
+    - uses: rojopolis/spellcheck-github-actions@0.11.0
+      name: Spellcheck
+      with:
+        source_files: 'docs/*.md'
+        task_name: Markdown
