add docs dir for link verification
Signed-off-by: udit <udit@chaosnative.com>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Links Verification
         run: |
           go get -u -v github.com/bmuschko/link-verifier
-          link-verifier --dirs website,README.md --fail=false
+          link-verifier --dirs website,README.md,docs --fail=false
 
       - name: Installing and Running embedmed
         run: |
